[gd_scene load_steps=11 format=3 uid="uid://daw8dua3ep414"]

[ext_resource type="Script" path="res://levels/level_base.gd" id="1_j3vug"]
[ext_resource type="TileSet" uid="uid://dn505hopwb4de" path="res://assets/tilesets/tiles_items.tres" id="1_w6tut"]
[ext_resource type="TileSet" uid="uid://dhxw3f8l2saqn" path="res://assets/tilesets/tiles_world.tres" id="2_4v0vk"]
[ext_resource type="TileSet" uid="uid://blhd0ogpuydej" path="res://assets/tilesets/tiles_spikes.tres" id="2_a24td"]
[ext_resource type="Texture2D" uid="uid://elfqj4ni4jxs" path="res://assets/environment/back.png" id="2_m1qmi"]
[ext_resource type="Texture2D" uid="uid://c74m2qnljojh0" path="res://assets/environment/middle.png" id="3_387yw"]
[ext_resource type="PackedScene" uid="uid://cu2nt28m0rh4s" path="res://Actor/player.tscn" id="4_p7ynt"]
[ext_resource type="PackedScene" uid="uid://dfvp4wf2r6r05" path="res://UI/hud.tscn" id="8_xuc8v"]
[ext_resource type="AudioStream" uid="uid://0wq33pdf1sh1" path="res://assets/audio/pickup2.ogg" id="9_i205b"]
[ext_resource type="PackedScene" uid="uid://baobjqwwwnsbx" path="res://Items/ladders.tscn" id="10_cysbb"]

[node name="LevelBase" type="Node2D"]
script = ExtResource("1_j3vug")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(576, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_m1qmi")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.6, 1)
motion_mirroring = Vector2(880, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture_repeat = 3
position = Vector2(0, 158)
texture = ExtResource("3_387yw")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 880, 368)

[node name="World" type="TileMap" parent="."]
tile_set = ExtResource("2_4v0vk")
format = 2

[node name="Items" type="TileMap" parent="."]
tile_set = ExtResource("1_w6tut")
format = 2

[node name="Danger" type="TileMap" parent="."]
tile_set = ExtResource("2_a24td")
format = 2

[node name="Player" parent="." instance=ExtResource("4_p7ynt")]

[node name="SpawnPoint" type="Marker2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("8_xuc8v")]

[node name="PickUpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_i205b")

[node name="Ladders" parent="." instance=ExtResource("10_cysbb")]

[connection signal="score_changed" from="." to="CanvasLayer/HUD" method="update_score"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="life_changed" from="Player" to="CanvasLayer/HUD" method="update_life"]
